--- a/Index.html
+++ b/Index.html
@@ -15,10 +15,8 @@
 </head>
 <body>
     <header class="header">
-        <div class="LOGO"> 
-             <p>COMMUNITY</p>
-             <p>SCIENCE</p>
-             <p>MUSEUM</p> </div>
+      
+             <img src="/Images/Logo.png" class="LOGO" alt="Logo, purple square with orange triangle and yelloow hexagon, next to the text COMMUNITY SCIENCE MUSEUM in all caps">
        <nav class="header_menu">
         <ul>
             <li>Home</li>
