Tried to make hamburger menu
Smal fixes and hamburger menu test on bioligy

--- a/Visit.html
+++ b/Visit.html
@@ -11,18 +11,18 @@
 <script src="https://kit.fontawesome.com/db895f6c4c.js" crossorigin="anonymous"></script>
 </head>
 <body>
-<header class="header">
-         <img src="/Images/Logo.png" class="LOGO" alt="Logo, purple square with orange triangle and yelloow hexagon, next to the text COMMUNITY SCIENCE MUSEUM in all caps">
-   <nav class="header_menu">
-    <ul>
-        <li>Home</li>
-        <li>Visit</li>
-        <li>Exhibition</li>
-        <li> <input type="checkbox" id="menu_checkbox">
-        <label for="menu_checkbox" class="menu_hamburger"> 
-        <i class="fa-solid fa-bars"></i></label> Menu</li>
-    </ul>
-   </nav>
+    <header class="header">
+        <a href="Index.html"><img src="/Images/Logo.png" class="LOGO" alt="Logo, purple square with orange triangle and yelloow hexagon, next to the text COMMUNITY SCIENCE MUSEUM in all caps"></a>
+  <nav class="header_menu"> 
+   <ul>
+      <li><a href="Index.html">Home</a></li>
+      <li><a href="Visit.html">Visit</a></li>
+      <li><a href="exhibition_Spaces.html">Exhibition</a></li>
+       <li> <input type="checkbox" id="menu_checkbox">
+       <label for="menu_checkbox" class="menu_hamburger"> 
+       <i class="fa-solid fa-bars"></i></label> Menu</li>
+   </ul>
+  </nav>
 </header>
 <main>
     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6554.295131536195!2d-123.21329196105462!3d39.16982255205752!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x808165281f3b9709%3A0x884cd2ca58fbf870!2s1550%20Millview%20Rd%2C%20Ukiah%2C%20CA%2095482%2C%20USA!5e0!3m2!1sno!2sno!4v1682346238513!5m2!1sno!2sno" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
@@ -82,7 +82,7 @@
         <p>Our shop offers a range of memorabilia from the museum as well as great gifts and activity packs that allow you to continue to explore science even after you’ve left the museum.</p>
     </div>
 </section>
-</main>
+</main> 
 </body>
 <footer>
     <div>
