--- a/exhibition_Spaces.html
+++ b/exhibition_Spaces.html
@@ -11,41 +11,41 @@
 <script src="https://kit.fontawesome.com/db895f6c4c.js" crossorigin="anonymous"></script>
 </head>
 <body>
-<header class="header">
-         <img src="/Images/Logo.png" class="LOGO" alt="Logo, purple square with orange triangle and yelloow hexagon, next to the text COMMUNITY SCIENCE MUSEUM in all caps">
-   <nav class="header_menu">
-    <ul>
-        <li>Home</li>
-        <li>Visit</li>
-        <li>Exhibition</li>
-        <li> <input type="checkbox" id="menu_checkbox">
-        <label for="menu_checkbox" class="menu_hamburger"> 
-        <i class="fa-solid fa-bars"></i></label> Menu</li>
-    </ul>
-   </nav>
+    <header class="header">
+        <a href="Index.html"><img src="/Images/Logo.png" class="LOGO" alt="Logo, purple square with orange triangle and yelloow hexagon, next to the text COMMUNITY SCIENCE MUSEUM in all caps"></a>
+  <nav class="header_menu"> 
+   <ul>
+      <li><a href="Index.html">Home</a></li>
+      <li><a href="Visit.html">Visit</a></li>
+      <li><a href="exhibition_Spaces.html">Exhibition</a></li>
+       <li> <input type="checkbox" id="menu_checkbox">
+       <label for="menu_checkbox" class="menu_hamburger"> 
+       <i class="fa-solid fa-bars"></i></label> Menu</li>
+   </ul>
+  </nav>
 </header>
 <main class="spaces_main">
-    <div><a href="Cosmology.html"> <img src="Images/Cosmo1.jpg" alt="night sky with many stars and a purple glow"></a>
+    <div><a href="-Cosmology.html"> <img src="Images/Cosmo1.jpg" alt="night sky with many stars and a purple glow"></a>
         <p>Cosmology</p>
     </div>
     <div>
-        <a href="evelution.html"> <img src="Images/Evelution1.jpg" alt="Scelletons of the evelution, four scelletons, one monkey, then a small human, bigger human and human today"></a>
+        <a href="-evelution.html"> <img src="Images/Evelution1.jpg" alt="Scelletons of the evelution, four scelletons, one monkey, then a small human, bigger human and human today"></a>
         <p>Evolution</p>
     </div>
     <div>
-        <a href="bioligy.html"> <img src="Images/BioMed1_heart.jpg" alt="model of a heart"></a>
+        <a href="-bioligy.html"> <img src="Images/BioMed1_heart.jpg" alt="model of a heart"></a>
         <p>Biology and Medicine</p>
     </div>
     <div>
-        <a href="robotics.html"> <img src="Images/Robot1.jpg" alt="two teenagers one smiling and looking into the camera with a red robotic objeckt infront of him"></a>
+        <a href="-robotics.html"> <img src="Images/Robot1.jpg" alt="two teenagers one smiling and looking into the camera with a red robotic objeckt infront of him"></a>
         <p>Robotics</p>
     </div>
     <div>
-        <a href="Ecology.html"> <img src="Images/Ecology1.jpg" alt="A boy and a teacher looking at a home made windmill"></a>
+        <a href="-Ecology.html"> <img src="Images/Ecology1.jpg" alt="A boy and a teacher looking at a home made windmill"></a>
         <p>Ecology</p>
     </div>
     <div>
-        <a href="lego.html"> <img src="Images/Lego1.jpg" alt="A lego animal with four legs and two antennas, in different colors, with students in the background"></a>
+        <a href="-lego.html"> <img src="Images/Lego1.jpg" alt="A lego animal with four legs and two antennas, in different colors, with students in the background"></a>
         <p>Lego-room</p>
     </div>
 </main>
