--- a/special_events.html
+++ b/special_events.html
@@ -11,18 +11,18 @@
 <script src="https://kit.fontawesome.com/db895f6c4c.js" crossorigin="anonymous"></script>
 </head>
 <body>
-<header class="header">
-         <img src="/Images/Logo.png" class="LOGO" alt="Logo, purple square with orange triangle and yelloow hexagon, next to the text COMMUNITY SCIENCE MUSEUM in all caps">
-   <nav class="header_menu">
-    <ul>
-        <li>Home</li>
-        <li>Visit</li>
-        <li>Exhibition</li>
-        <li> <input type="checkbox" id="menu_checkbox">
-        <label for="menu_checkbox" class="menu_hamburger"> 
-        <i class="fa-solid fa-bars"></i></label> Menu</li>
-    </ul>
-   </nav>
+    <header class="header">
+        <a href="Index.html"><img src="/Images/Logo.png" class="LOGO" alt="Logo, purple square with orange triangle and yelloow hexagon, next to the text COMMUNITY SCIENCE MUSEUM in all caps"></a>
+  <nav class="header_menu"> 
+   <ul>
+      <li><a href="Index.html">Home</a></li>
+      <li><a href="Visit.html">Visit</a></li>
+      <li><a href="exhibition_Spaces.html">Exhibition</a></li>
+       <li> <input type="checkbox" id="menu_checkbox">
+       <label for="menu_checkbox" class="menu_hamburger"> 
+       <i class="fa-solid fa-bars"></i></label> Menu</li>
+   </ul>
+  </nav>
 </header>
 <main class="event_main">
 <div>
@@ -69,4 +69,4 @@
         <a href="#" >Corporate partnership</a>
     </div>
 </footer>
-</html>
+</html> 
