Added all spaces HTML ++
Added HTML to spaces
Almost finished CSS on spaces as well

--- a/-bioligy.html
+++ b/-bioligy.html
@@ -51,7 +51,14 @@
         For many people their life expectancy is much longer and their quality of life much improved, thanks to the growth of our understanding of medicine.
          Over a series of exhibits we explore the history of medicine and take a look at some major breakthroughs including the discovery of penicillin and the first heart transplant.
         Many of our great medicinal discoveries have come not only from the lab, but also from observing animals in the wild. Often our fellow creatures have beat us to it.</p>
-</div>
+    </p>
+     <ul class="spaces_images">
+            <img src="Images/BioMed2.jpg" alt=" a seethrough model of a scull">
+            <img src="Images/BioMed3.jpg" alt="a model of the body with organs showing wearing a hat">
+            <img src="Images/BioMed4.jpg" alt="a boy and a girl holding hands with a scelleton">
+            <img src="Images/BioMed5.jpg" alt="a boy drawing a virus on the whiteboard and a older girl watching.">
+            </ul>
+        </div>
 
     <div class="information_blocks">
         <h2>Info</h2>
@@ -66,12 +73,36 @@
         <button> Book Now</button>
     </div>
 </section>
-Date: Open daily
-
-Entrance: Free
-
-Guided tour: 70 NOK pr person
-
-Group over 6people: 50 NOK pr person
-
-
+</main>
+</body>
+<footer>
+    <div>
+        <h3>Contact us</h3>
+        <h3> Location</h3>
+        <h4> 1550 Millview RD</h4>
+        <h4>Ukaia, California</h4>
+        <h4> 9582,USA</h4>
+        <h3> Phone:</h3>
+        <h4> 202-555-0171</h4>
+    </div>
+    <div>
+        <h3> Keep in touch</h3>
+        <a href="#" >Facebook</a>
+        <a href="#" >Twitter</a>
+        <a href="#" >Instagram</a>
+        <a href="#" >Youtube</a>
+    </div>
+    <div>
+        <h3> Service</h3>
+        <a href="#" >My account</a>
+        <a href="#" >Newsletter</a>
+        <a href="#" >Privacy</a>
+        <a href="#" >Terms of service</a>
+    </div>
+    <div>
+        <h3> Service</h3>
+        <a href="#" >Make a donation</a>
+        <a href="#" >Corporate partnership</a>
+    </div>
+</footer>
+</html>
