--- a/exhibition_Spaces.html
+++ b/exhibition_Spaces.html
@@ -24,7 +24,7 @@
    </ul>
   </nav>
 </header>
-<main class="spaces_main">
+<main class="exhibition_main">
     <div><a href="-Cosmology.html"> <img src="Images/Cosmo1.jpg" alt="night sky with many stars and a purple glow"></a>
         <p>Cosmology</p>
     </div>
