--- a/Index.html
+++ b/Index.html
@@ -30,48 +30,53 @@
     <main class="index_main">
         <section class="Image_links">
             <div>
+                <a href="Visit.html">
                 <img src="Images/Google_Maps.png" alt="map with pinned address">
-                <p>Visit</p>
+                <p>Visit</p></a>
             </div>
             <div>
+                <a href="exhibition_Spaces.html">
                 <img src="Images/Spaces.jpg" alt="Image of a lady in a labcoat looking in to a futuristic maskine">
-                <p>Exhibition spaces</p>
+                <p>Exhibition spaces</p></a>
             </div>
             <div>
+                <a href="special_events.html">
                 <img src="Images/Special.jpg" alt="Image of the mooncycle with black background">
-                <p>Special Events</p>
+                <p>Special Events</p></a>
             </div>
             <div>
+                <a href="#">
                 <img src="Images/kids.jpg" alt="Picture of a child reading a book whith spaceships in the background">
-                <p> For kids</p>
+                <p> For kids</p></a>
             </div>
             <div>
+                <a href="#">
                 <img src="Images/Teacher1.jpg" alt=" Lady writing on blackboard with her back turned">
-                <p> For teachers</p>
+                <p> For teachers</p></a>
             </div>
-            <div>
+            <div><a href="#">
                 <img src="Images/research.jpg" alt="man and lady in labcoats in a labratory">
-            <p> For researchers</p>
+            <p> For researchers</p></a>
             </div>
-            <div> 
+            <div> <a href="#">
                 <img src="Images/support.jpg" alt="picture of a colorfull wall with the text museum in colors on it">
-                <p> Support us</p>
+                <p> Support us</p></a>
             </div>
-            <div>
+            <div><a href="#">
                 <img src="Images/volenteer.jpg" alt=" Man in labcoat with children around him, poring liquid from one glass to another">
-                <p>Volunteer</p>
+                <p>Volunteer</p></a>
             </div>
-            <div> 
+            <div> <a href="#">
                 <img src="Images/internship.jpg" alt="lady with labcoat and facemask looking into a microskope">
-            <p>Internships</p>
+            <p>Internships</p></a>
             </div>
-            <div> 
+            <div> <a href="#">
                 <img src="Images/Shop.jpg" alt="picture of many wires conected together and forming a big ball, seen from underneeth">
-            <p> Shop</p>
+            <p> Shop</p></a>
             </div>
-            <div>
+            <div><a href="#">
                 <img src="Images/FAQ.jpg" alt=" Green keyhole with three borromean rings around it">
-                <p> FAQ</p>
+                <p> FAQ</p></a>
             </div>
         </section>
     </main>
