--- a/Visit.html
+++ b/Visit.html
@@ -7,7 +7,7 @@
     <meta description="Addres and information about your visit to the museum. Opening hours shop cost etc">
     <title>CSM|Visit</title>
     <link href="Css/style.css" rel="stylesheet">
-<link href="Css/index.css" rel="stylesheet">
+<link href="Css/visit.css" rel="stylesheet">
 <script src="https://kit.fontawesome.com/db895f6c4c.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -24,25 +24,37 @@
    </ul>
   </nav>
 </header>
-<main>
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6554.295131536195!2d-123.21329196105462!3d39.16982255205752!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x808165281f3b9709%3A0x884cd2ca58fbf870!2s1550%20Millview%20Rd%2C%20Ukiah%2C%20CA%2095482%2C%20USA!5e0!3m2!1sno!2sno!4v1682346238513!5m2!1sno!2sno" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+<main class="visit_main">
+    
+    <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6554.295131536195!2d-123.21329196105462!3d39.16982255205752!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x808165281f3b9709%3A0x884cd2ca58fbf870!2s1550%20Millview%20Rd%2C%20Ukiah%2C%20CA%2095482%2C%20USA!5e0!3m2!1sno!2sno!4v1682346238513!5m2!1sno!2sno" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" ></iframe>
+<h1> Visit us</h1>
 <section class="information_blocks">
-    <div>
-        <h1>Location</h1>
-        <p> The Museum is located at
-            1550 Millview Rd, 
-            Ukiah, California 
-            95482, USA</p>
+    <div class="visit_location">
+        <h2>Location</h2>
+        <p> The Museum is located at</p>
+        <p> 1550 Millview Rd, </p>
+        <p> Ukiah, California </p>
+        <p> 95482, USA</p>
+    </div>
+    <div class="times">
+        <h2> Opening Hours</h2>
+        <p>Monday: Closed</p>
+        <p> Tuesday: 10:00 – 16:00</p>
+        <p> Wednesday: 10:00 – 16:00</p>
+        <p> Thursday: 10:00 – 16:00</p>
+        <p> Friday: 10:00 – 19:00</p>
+        <p> Saturday: 9:00 – 16:00</p>
+        <p> Sunday: 9:00 – 13:00</p>
     </div>
     <div>
-        <h1> Public Transportation</h1>
-        <h2> Buss 9</h2>
+        <h2> Public Transportation</h2>
+        <h3> Buss 9</h3>
         <p>Take the buss to Feedlot Ln  & Bush ST
             Stopp-ID: 100
             Walk east on Feed Lot Ln,
              turn wright on to Millview Rd.
             The museum will be on your right hand  </p>
-            <h2> Buss 75</h2>
+            <h3> Buss 75</h3>
             <p>
                 Take the buss to Raleys
                 Stopp-ID: 97
@@ -52,18 +64,9 @@
                 The museum will be on your left hand
             </p>
     </div>
+ 
     <div>
-        <h1> Opening Hours</h1>
-        <p>Monday: Closed
-            Tuesday: 10:00 – 16:00
-            Wednesday: 10:00 – 16:00
-            Thursday: 10:00 – 16:00
-            Friday: 10:00 – 19:00
-            Saturday: 9:00 – 16:00
-            Sunday: 9:00 – 13:00</p>
-    </div>
-    <div>
-        <h1>Admission</h1>
+        <h2>Admission</h2>
         <p>
         The entrance is free for all.
         There are guided tours of the museum that leave every hour. 
@@ -73,12 +76,12 @@
         please contact us to arrange the tour.</p>
     </div>
     <div>
-        <h1>Info</h1>
-        <h2>Accessibility</h2>
+        <h2>Info</h2>
+        <h3>Accessibility</h3>
         <p>The museum has wheelchair accessibility ramps. It also has audio guides and braille display signs for the visually impaired.</p>
-        <h2> Food and drink</h2>
+        <h3> Food and drink</h3>
         <p>There is a café attached to the museum where you can get light lunches, soft drinks, coffee, snacks and more.</p>
-        <h2> Shop</h2>
+        <h3> Shop</h3>
         <p>Our shop offers a range of memorabilia from the museum as well as great gifts and activity packs that allow you to continue to explore science even after you’ve left the museum.</p>
     </div>
 </section>
@@ -86,7 +89,7 @@
 </body>
 <footer>
     <div>
-        <h2>Contact us</h2>
+        <h3>Contact us</h3>
         <h3> Location</h3>
         <h4> 1550 Millview RD</h4>
         <h4>Ukaia, California</h4>
@@ -95,21 +98,21 @@
         <h4> 202-555-0171</h4>
     </div>
     <div>
-        <h2> Keep in touch</h2>
+        <h3> Keep in touch</h3>
         <a href="#" >Facebook</a>
         <a href="#" >Twitter</a>
         <a href="#" >Instagram</a>
         <a href="#" >Youtube</a>
     </div>
     <div>
-        <h2> Service</h2>
+        <h3> Service</h3>
         <a href="#" >My account</a>
         <a href="#" >Newsletter</a>
         <a href="#" >Privacy</a>
         <a href="#" >Terms of service</a>
     </div>
     <div>
-        <h2> Service</h2>
+        <h3> Service</h3>
         <a href="#" >Make a donation</a>
         <a href="#" >Corporate partnership</a>
     </div>
