--- a/Index.html
+++ b/Index.html
@@ -85,30 +85,30 @@
 </body>
 <footer>
     <div>
-        <h2>Contact us</h2>
+        <h3>Contact us</h3>
         <h3> Location</h3>
-        <h4> 1550 Millview RD</h4>
-        <h4>Ukaia, California</h4>
-        <h4> 9582,USA</h4>
+        <p> 1550 Millview RD</p>
+        <p>Ukaia, California</p>
+        <p> 9582,USA</p>
         <h3> Phone:</h3>
-        <h4> 202-555-0171</h4>
+        <p> 202-555-0171</p>
     </div>
     <div>
-        <h2> Keep in touch</h2>
+        <h3> Keep in touch</h3>
         <a href="#" >Facebook</a>
         <a href="#" >Twitter</a>
         <a href="#" >Instagram</a>
         <a href="#" >Youtube</a>
     </div>
     <div>
-        <h2> Service</h2>
+        <h3> Quick links</h3>
         <a href="#" >My account</a>
         <a href="#" >Newsletter</a>
         <a href="#" >Privacy</a>
         <a href="#" >Terms of service</a>
     </div>
     <div>
-        <h2> Service</h2>
+        <h3> Service</h3>
         <a href="#" >Make a donation</a>
         <a href="#" >Corporate partnership</a>
     </div>
