fixed footer agaun

--- a/-Ecology.html
+++ b/-Ecology.html
@@ -77,12 +77,12 @@
 <footer>
     <div>
         <h3>Contact us</h3>
-        <h3> Location</h3>
-        <h4> 1550 Millview RD</h4>
-        <h4>Ukaia, California</h4>
-        <h4> 9582,USA</h4>
-        <h3> Phone:</h3>
-        <h4> 202-555-0171</h4>
+        <h4> Location</h4>
+        <p> 1550 Millview RD</p>
+        <p>Ukaia, California</p>
+        <p> 9582,USA</p>
+        <h4> Phone:</h4>
+        <p> 202-555-0171</p>
     </div>
     <div>
         <h3> Keep in touch</h3>
@@ -92,7 +92,7 @@
         <a href="#" >Youtube</a>
     </div>
     <div>
-        <h3> Service</h3>
+        <h3> Quick links</h3>
         <a href="#" >My account</a>
         <a href="#" >Newsletter</a>
         <a href="#" >Privacy</a>
