--- a/Index.html
+++ b/Index.html
@@ -27,57 +27,57 @@
         </ul>
        </nav>
     </header>
-    <main class="index_main">
-        <section class="Image_links">
-            <div>
+    <main >
+        <div class="Image_links" >
+            <div class="Image_link">
                 <a href="Visit.html">
                 <img src="Images/Google_Maps.png" alt="map with pinned address">
                 <p>Visit</p></a>
             </div>
-            <div>
+            <div class="Image_link">
                 <a href="exhibition_Spaces.html">
                 <img src="Images/Spaces.jpg" alt="Image of a lady in a labcoat looking in to a futuristic maskine">
                 <p>Exhibition spaces</p></a>
             </div>
-            <div>
+            <div class="Image_link">
                 <a href="special_events.html">
                 <img src="Images/Special.jpg" alt="Image of the mooncycle with black background">
                 <p>Special Events</p></a>
             </div>
-            <div>
+            <div class="Image_link">
                 <a href="#">
                 <img src="Images/kids.jpg" alt="Picture of a child reading a book whith spaceships in the background">
                 <p> For kids</p></a>
             </div>
-            <div>
+            <div class="Image_link">
                 <a href="#">
                 <img src="Images/Teacher1.jpg" alt=" Lady writing on blackboard with her back turned">
                 <p> For teachers</p></a>
             </div>
-            <div><a href="#">
+            <div class="Image_link"><a href="#">
                 <img src="Images/research.jpg" alt="man and lady in labcoats in a labratory">
             <p> For researchers</p></a>
             </div>
-            <div> <a href="#">
+            <div class="Image_link"> <a href="#">
                 <img src="Images/support.jpg" alt="picture of a colorfull wall with the text museum in colors on it">
                 <p> Support us</p></a>
             </div>
-            <div><a href="#">
+            <div class="Image_link"><a href="#">
                 <img src="Images/volenteer.jpg" alt=" Man in labcoat with children around him, poring liquid from one glass to another">
                 <p>Volunteer</p></a>
             </div>
-            <div> <a href="#">
+            <div class="Image_link"> <a href="#">
                 <img src="Images/internship.jpg" alt="lady with labcoat and facemask looking into a microskope">
             <p>Internships</p></a>
             </div>
-            <div> <a href="#">
+            <div class="Image_link"> <a href="#">
                 <img src="Images/Shop.jpg" alt="picture of many wires conected together and forming a big ball, seen from underneeth">
             <p> Shop</p></a>
             </div>
-            <div><a href="#">
+            <div class="Image_link"><a href="#">
                 <img src="Images/FAQ.jpg" alt=" Green keyhole with three borromean rings around it">
                 <p> FAQ</p></a>
-            </div>
+            </div></div>
         </section>
     </main>
     
