--- a/exhibition_Spaces.html
+++ b/exhibition_Spaces.html
@@ -25,26 +25,26 @@
   </nav>
 </header>
 <main class="exhibition_main">
-    <div><a href="-Cosmology.html"> <img src="Images/Cosmo1.jpg" alt="night sky with many stars and a purple glow"></a>
+    <div class="exhibition_space"><a href="-Cosmology.html"> <img src="Images/Cosmo1.jpg" alt="night sky with many stars and a purple glow"></a>
         <p>Cosmology</p>
     </div>
-    <div>
+    <div class="exhibition_space">
         <a href="-evelution.html"> <img src="Images/Evelution1.jpg" alt="Scelletons of the evelution, four scelletons, one monkey, then a small human, bigger human and human today"></a>
         <p>Evolution</p>
     </div>
-    <div>
+    <div class="exhibition_space">
         <a href="-bioligy.html"> <img src="Images/BioMed1_heart.jpg" alt="model of a heart"></a>
         <p>Biology and Medicine</p>
     </div>
-    <div>
+    <div class="exhibition_space">
         <a href="-robotics.html"> <img src="Images/Robot1.jpg" alt="two teenagers one smiling and looking into the camera with a red robotic objeckt infront of him"></a>
         <p>Robotics and AI</p>
     </div>
-    <div>
+    <div class="exhibition_space">
         <a href="-Ecology.html"> <img src="Images/Ecology1.jpg" alt="A boy and a teacher looking at a home made windmill"></a>
         <p>Ecology</p>
     </div>
-    <div>
+    <div class="exhibition_space">
         <a href="-lego.html"> <img src="Images/Lego1.jpg" alt="A lego animal with four legs and two antennas, in different colors, with students in the background"></a>
         <p>Lego-room</p>
     </div>
