visit flex and header test flex
Made visit to flex
and
header flex test

--- a/Visit.html
+++ b/Visit.html
@@ -46,7 +46,9 @@
         <p> Saturday: 9:00 – 16:00</p>
         <p> Sunday: 9:00 – 13:00</p>
     </div>
-    <div>
+</section>
+<section class="information_blocks2">
+    <div >
         <h2> Public Transportation</h2>
         <h3> Buss 9</h3>
         <p>Take the buss to Feedlot Ln  & Bush ST
