--- a/exhibition_Spaces.html
+++ b/exhibition_Spaces.html
@@ -25,7 +25,7 @@
   </nav>
 </header>
 <main class="exhibition_main">
-    <div class="exhibition_space"><a href="-Cosmology.html"> <img src="Images/Cosmo1.jpg" alt="night sky with many stars and a purple glow"></a>
+    <div class="exhibition_space_cosmo"><a href="-Cosmology.html"> <img src="Images/Cosmo1.jpg" alt="night sky with many stars and a purple glow"></a>
         <p>Cosmology</p>
     </div>
     <div class="exhibition_space">
