--- a/exhibition_Spaces.html
+++ b/exhibition_Spaces.html
@@ -25,7 +25,7 @@
   </nav>
 </header>
 <main class="exhibition_main">
-    <div class="exhibition_space_cosmo"><a href="-Cosmology.html"> <img src="Images/Cosmo1.jpg" alt="night sky with many stars and a purple glow"></a>
+    <div class="exhibition_space"><a href="-Cosmology.html"> <img src="Images/Cosmo1.jpg" alt="night sky with many stars and a purple glow"></a>
         <p>Cosmology</p>
     </div>
     <div class="exhibition_space">
@@ -40,11 +40,11 @@
         <a href="-robotics.html"> <img src="Images/Robot1.jpg" alt="two teenagers one smiling and looking into the camera with a red robotic objeckt infront of him"></a>
         <p>Robotics and AI</p>
     </div>
-    <div class="exhibition_space">
+    <div class="exhibition_space_eco">
         <a href="-Ecology.html"> <img src="Images/Ecology1.jpg" alt="A boy and a teacher looking at a home made windmill"></a>
         <p>Ecology</p>
     </div>
-    <div class="exhibition_space">
+    <div class="exhibition_space_lego">
         <a href="-lego.html"> <img src="Images/Lego1.jpg" alt="A lego animal with four legs and two antennas, in different colors, with students in the background"></a>
         <p>Lego-room</p>
     </div>
