--- a/special_events.html
+++ b/special_events.html
@@ -25,15 +25,15 @@
   </nav>
 </header>
 <main class="event_main">
-<div>
+<div class="event">
     <a href="#"> <img src="Images/Visitor.jpg" alt="Nasa logo with skies behind it"></a>
     <p>Visiting Professor of Aeronautics; Prof Sheila Widnall</p>
 </div>
-<div>
+<div class="event">
     <a href="#"> <img src="Images/Special.jpg" alt="Lunar fases with black background"></a>
     <p>Night in the Museum</p> 
 </div>
-<div>
+<div class="event">
     <a href="#"> <img src="Images/exhibition.jpg" alt="a white room filled with exhibition items, one pink animal with loong neck and wheels, one blue and white rocket, and images on the walls"></a>
     <p>Energetica Exhibition on Loan</p> 
 </div>
