--- a/Visit.html
+++ b/Visit.html
@@ -90,7 +90,7 @@
 </main> 
 </body>
 <footer>
-    <div>
+    <div class="footer_contact">
         <h3>Contact us</h3>
         <h4> Location</h4>
         <p> 1550 Millview RD</p>
