hamburger menu testing
Tried to fix hamburgermenu - events.. didnt work

--- a/special_events.html
+++ b/special_events.html
@@ -15,13 +15,27 @@
         <a href="Index.html"><img src="/Images/Logo.png" class="LOGO" alt="Logo, purple square with orange triangle and yelloow hexagon, next to the text COMMUNITY SCIENCE MUSEUM in all caps"></a>
   <nav class="header_menu"> 
    <ul>
-      <li><a href="Index.html">Home</a></li>
-      <li><a href="Visit.html">Visit</a></li>
-      <li><a href="exhibition_Spaces.html">Exhibition</a></li>
-       <li> <input type="checkbox" id="menu_checkbox">
-       <label for="menu_checkbox" class="menu_hamburger"> 
-       <i class="fa-solid fa-bars"></i></label> Menu</li>
+      <li class="menu_top"><a href="Index.html">Home</a></li>
+      <li class="menu_top"><a href="Visit.html">Visit</a></li>
+      <li class="menu_top"><a href="exhibition_Spaces.html">Exhibition</a></li>
    </ul>
+   <div class="hamburger_menu">
+    <input type="checkbox" id="menu_checkbox">
+        <label for="menu_checkbox" class="menu_hamburger">
+            <i class="fa-solid fa-bars"></i>
+            Menu</label> 
+            <ul class="hamburger_list">
+    <li class="hide_list"> <a href="#">For kids</a> </li>
+    <li class="hide_list"> <a href="#">For teachers</a> </li>
+    <li class="hide_list"> <a href="#">For Researchers</a> </li>
+    <li class="hide_list"> <a href="#">Support us</a> </li>
+    <li class="hide_list"> <a href="#">Volenteer</a> </li>
+    <li class="hide_list"> <a href="#">Internship</a> </li>
+    <li class="hide_list"> <a href="#">Shop</a> </li>
+    <li class="hide_list"> <a href="#">FAQ</a> </li>
+    <li class="hide_list"> <a href="#">Keep in touch</a> </li>
+    <li class="hide_list"> <a href="#">Contact us</a> </li>
+   </ul></div>
   </nav>
 </header>
 <main class="event_main">
