--- a/special_events.html
+++ b/special_events.html
@@ -11,20 +11,19 @@
 <script src="https://kit.fontawesome.com/db895f6c4c.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <header class="header">
+    <header>
         <a href="Index.html"><img src="/Images/Logo.png" class="LOGO" alt="Logo, purple square with orange triangle and yelloow hexagon, next to the text COMMUNITY SCIENCE MUSEUM in all caps"></a>
-  <nav class="header_menu"> 
+  <section class="header_menu"> 
+    <nav>
    <ul>
       <li class="menu_top"><a href="Index.html">Home</a></li>
       <li class="menu_top"><a href="Visit.html">Visit</a></li>
       <li class="menu_top"><a href="exhibition_Spaces.html">Exhibition</a></li>
-   </ul>
-   <div class="hamburger_menu">
-    <input type="checkbox" id="menu_checkbox">
-        <label for="menu_checkbox" class="menu_hamburger">
-            <i class="fa-solid fa-bars"></i>
-            Menu</label> 
-            <ul class="hamburger_list">
+  <div >
+            <label for="menu_checkbox" class="menu_hamburger">
+              <i class="fa-solid fa-bars"></i>
+            Menu</label>    
+            <input type="checkbox" id="menu_checkbox">
     <li class="hide_list"> <a href="#">For kids</a> </li>
     <li class="hide_list"> <a href="#">For teachers</a> </li>
     <li class="hide_list"> <a href="#">For Researchers</a> </li>
@@ -35,9 +34,7 @@
     <li class="hide_list"> <a href="#">FAQ</a> </li>
     <li class="hide_list"> <a href="#">Keep in touch</a> </li>
     <li class="hide_list"> <a href="#">Contact us</a> </li>
-   </ul></div>
-  </nav>
-</header>
+            </div></div></ul></nav></section></header>
 <main class="event_main">
 <div class="event">
     <a href="#"> <img src="Images/Visitor.jpg" alt="Nasa logo with skies behind it"></a>
