--- a/Index.html
+++ b/Index.html
@@ -14,19 +14,35 @@
     <script src="https://kit.fontawesome.com/db895f6c4c.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <header class="header">
-             <a href="Index.html"><img src="/Images/Logo.png" class="LOGO" alt="Logo, purple square with orange triangle and yelloow hexagon, next to the text COMMUNITY SCIENCE MUSEUM in all caps"></a>
-       <nav class="header_menu"> 
-        <ul>
-           <li><a href="Index.html">Home</a></li>
-           <li><a href="Visit.html">Visit</a></li>
-           <li><a href="exhibition_Spaces.html">Exhibition</a></li>
-            <li> <input type="checkbox" id="menu_checkbox">
-            <label for="menu_checkbox" class="menu_hamburger"> 
-            <i class="fa-solid fa-bars"></i></label> Menu</li>
-        </ul>
-       </nav>
-    </header>
+    <header>
+        <a href="Index.html"><img src="/Images/Logo.png" class="LOGO" alt="Logo, purple square with orange triangle and yelloow hexagon, next to the text COMMUNITY SCIENCE MUSEUM in all caps"></a>
+  <section class="header_menu"> 
+    <nav>
+   <ul>
+      <li class="menu_top"><a href="Index.html">Home</a></li>
+      <li class="menu_top"><a href="Visit.html">Visit</a></li>
+      <li class="menu_top"><a href="exhibition_Spaces.html">Exhibition</a></li>
+  <div >
+            <label for="menu_checkbox" class="menu_hamburger">
+              <i class="fa-solid fa-bars"></i>
+            Menu</label>    
+            <input type="checkbox" id="menu_checkbox">
+    <li class="hide_list"> <a href="#">For kids</a> </li>
+    <li class="hide_list"> <a href="#">For teachers</a> </li>
+    <li class="hide_list"> <a href="#">For Researchers</a> </li>
+    <li class="hide_list"> <a href="#">Support us</a> </li>
+    <li class="hide_list"> <a href="#">Volenteer</a> </li>
+    <li class="hide_list"> <a href="#">Internship</a> </li>
+    <li class="hide_list"> <a href="#">Shop</a> </li>
+    <li class="hide_list"> <a href="#">FAQ</a> </li>
+    <li class="hide_list"> <a href="#">Keep in touch</a> </li>
+    <li class="hide_list"> <a href="#">Contact us</a> </li>
+            </div>
+        </div>
+    </ul>
+</nav>
+</section>
+</header>
     <main >
         <div class="Image_links" >
             <div class="Image_link">
