--- a/exhibition_Spaces.html
+++ b/exhibition_Spaces.html
@@ -24,7 +24,10 @@
    </ul>
   </nav>
 </header>
-<main class="exhibition_main">
+<main>
+    <div class="exhibition_headline"> 
+    <h1 > Our exhibition spaces</h1></div>
+    <section class="exhibition_main">
     <div class="exhibition_space"><a href="-Cosmology.html"> <img src="Images/Cosmo1.jpg" alt="night sky with many stars and a purple glow"></a>
         <p>Cosmology</p>
     </div>
