--- a/special_events.html
+++ b/special_events.html
@@ -34,7 +34,12 @@
     <li class="hide_list"> <a href="#">FAQ</a> </li>
     <li class="hide_list"> <a href="#">Keep in touch</a> </li>
     <li class="hide_list"> <a href="#">Contact us</a> </li>
-            </div></div></ul></nav></section></header>
+            </div>
+        </div>
+    </ul>
+</nav>
+</section>
+</header>
 <main class="event_main">
 <div class="event">
     <a href="#"> <img src="Images/Visitor.jpg" alt="Nasa logo with skies behind it"></a>
