Fixed header and index++

--- a/-Cosmology.html
+++ b/-Cosmology.html
@@ -23,7 +23,7 @@
        <label for="menu_checkbox" class="hamburger_bars"> 
        <i class="fa-solid fa-bars"> </i></label> 
       Menu</li>
-      <div  class="hide_list">
+      <li  class="hide_list">
         <a   class="hide_list" href="#">For kids</a>
         <a href="#">For teachers</a>
         <a href="#">For Researchers</a>
