--- a/Index.html
+++ b/Index.html
@@ -14,19 +14,18 @@
     <script src="https://kit.fontawesome.com/db895f6c4c.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <header>
+    <header class="header">
         <a href="Index.html"><img src="/Images/Logo.png" class="LOGO" alt="Logo, purple square with orange triangle and yelloow hexagon, next to the text COMMUNITY SCIENCE MUSEUM in all caps"></a>
-  <section class="header_menu"> 
-    <nav>
+        <label for="menu_checkbox" class="menu_hamburger"><i class="fa-solid fa-bars"></i> Menu</label>    
+          <input type="checkbox" id="menu_checkbox">
+        <nav> 
    <ul>
-      <li class="menu_top"><a href="Index.html">Home</a></li>
-      <li class="menu_top"><a href="Visit.html">Visit</a></li>
-      <li class="menu_top"><a href="exhibition_Spaces.html">Exhibition</a></li>
-  <div >
-            <label for="menu_checkbox" class="menu_hamburger">
-              <i class="fa-solid fa-bars"></i>
-            Menu</label>    
-            <input type="checkbox" id="menu_checkbox">
+      <li><a href="Index.html">Home</a></li>
+      <li><a href="Visit.html">Visit</a></li>
+      <li><a href="exhibition_Spaces.html">Exhibition Spaces</a></li>  
+      <li> <a href="special_events.html"> Special events</a></li>
+   </ul>
+   <div >
     <li class="hide_list"> <a href="#">For kids</a> </li>
     <li class="hide_list"> <a href="#">For teachers</a> </li>
     <li class="hide_list"> <a href="#">For Researchers</a> </li>
@@ -38,10 +37,7 @@
     <li class="hide_list"> <a href="#">Keep in touch</a> </li>
     <li class="hide_list"> <a href="#">Contact us</a> </li>
             </div>
-        </div>
-    </ul>
-</nav>
-</section>
+  </nav>
 </header>
     <main >
         <section class="hero">
@@ -53,27 +49,27 @@
     
         <section class="exhibition_main">
             <div class="exhibition_space"><a href="-Cosmology.html"> <img src="Images/Cosmo1.jpg" alt="night sky with many stars and a purple glow"></a>
-                <p>Cosmology</p>
+                <h2>Cosmology</h2>
             </div>
             <div class="exhibition_space">
                 <a href="-evelution.html"> <img src="Images/Evelution1.jpg" alt="Scelletons of the evelution, four scelletons, one monkey, then a small human, bigger human and human today"></a>
-                <p>Evolution</p>
+                <h2>Evolution</h2>
             </div>
             <div class="exhibition_space">
                 <a href="-bioligy.html"> <img src="Images/BioMed1_heart.jpg" alt="model of a heart"></a>
-                <p>Biology and Medicine</p>
+                <h2>Biology and Medicine</h2>
             </div>
             <div class="exhibition_space">
                 <a href="-robotics.html"> <img src="Images/Robot1.jpg" alt="two teenagers one smiling and looking into the camera with a red robotic objeckt infront of him"></a>
-                <p>Robotics and AI</p>
+                <h2>Robotics and AI</h2>
             </div>
             <div class="exhibition_space_eco">
                 <a href="-Ecology.html"> <img src="Images/Ecology1.jpg" alt="A boy and a teacher looking at a home made windmill"></a>
-                <p>Ecology</p>
+                <h2>Ecology</h2>
             </div>
             <div class="exhibition_space_lego">
                 <a href="-lego.html"> <img src="Images/Lego1.jpg" alt="A lego animal with four legs and two antennas, in different colors, with students in the background"></a>
-                <p>Lego-room</p>
+                <h2>Lego-room</h2>
             </div>
 </section>
 <section class="starClub">
@@ -86,21 +82,21 @@
             <div class="Image_link">
                 <a href="special_events.html">
                 <img src="Images/Special.jpg" alt="Image of the mooncycle with black background">
-                <p>Special Events</p></a>
+                <h2>Special Events</h2></a>
             </div>
             <div class="Image_link">
                 <a href="#">
                 <img src="Images/kids.jpg" alt="Picture of a child reading a book whith spaceships in the background">
-                <p> For kids</p></a>
+                <h2> For kids</h2></a>
             </div>
             <div class="Image_link">
                 <a href="#">
                 <img src="Images/Teacher1.jpg" alt=" Lady writing on blackboard with her back turned">
-                <p> For teachers</p></a>
+                <h2> For teachers</h2></a>
             </div>
             <div class="Image_link"><a href="#">
                 <img src="Images/research.jpg" alt="man and lady in labcoats in a labratory">
-            <p> For researchers</p></a>
+            <h2> For researchers</h2></a>
             </div>
         </section>
         <section class="starClub">
@@ -116,23 +112,23 @@ Ukiah, California 95482, USA
         <section class="Image_links">
             <div class="Image_link"> <a href="#">
                 <img src="Images/support.jpg" alt="picture of a colorfull wall with the text museum in colors on it">
-                <p> Support us</p></a>
+                <h2> Support us</h2></a>
             </div>
             <div class="Image_link"><a href="#">
                 <img src="Images/volenteer.jpg" alt=" Man in labcoat with children around him, poring liquid from one glass to another">
-                <p>Volunteer</p></a>
+                <h2>Volunteer</h2></a>
             </div>
             <div class="Image_link"> <a href="#">
                 <img src="Images/internship.jpg" alt="lady with labcoat and facemask looking into a microskope">
-            <p>Internships</p></a>
+            <h2>Internships</h2></a>
             </div>
             <div class="Image_link"> <a href="#">
                 <img src="Images/Shop.jpg" alt="picture of many wires conected together and forming a big ball, seen from underneeth">
-            <p> Shop</p></a>
+            <h2> Shop</h2></a>
             </div>
             <div class="Image_link"><a href="#">
                 <img src="Images/FAQ.jpg" alt=" Green keyhole with three borromean rings around it">
-                <p> FAQ</p></a>
+                <h2> FAQ</h2></a>
             </div></div>
         </section></section>
     </main>
@@ -143,11 +139,11 @@ Ukiah, California 95482, USA
     <div>
         <h3>Contact us</h3>
         <h4> Location</h4>
-        <p> 1550 Millview RD</p>
-        <p>Ukaia, California</p>
-        <p> 9582,USA</p>
+        <h2> 1550 Millview RD</h2>
+        <h2>Ukaia, California</h2>
+        <h2> 9582,USA</h2>
         <h4> Phone:</h4>
-        <p> 202-555-0171</p>
+        <h2> 202-555-0171</h2>
     </div>
     <div>
         <h3> Keep in touch</h3>
