--- a/Visit.html
+++ b/Visit.html
@@ -17,10 +17,8 @@
    <ul>
       <li><a href="Index.html">Home</a></li>
       <li><a href="Visit.html">Visit</a></li>
-      <li><a href="exhibition_Spaces.html">Exhibition</a></li>
-       <li> <input type="checkbox" id="menu_checkbox">
-       <label for="menu_checkbox" class="menu_hamburger"> 
-       <i class="fa-solid fa-bars"></i></label> Menu</li>
+      <li><a href="exhibition_Spaces.html">Exhibition Spaces</a></li>  
+      <li> <a href="special_events.html"> Special events</a></li>
    </ul>
   </nav>
 </header>
