--- a/special_events.html
+++ b/special_events.html
@@ -20,10 +20,7 @@
       <li class="menu_top"><a href="Visit.html">Visit</a></li>
       <li class="menu_top"><a href="exhibition_Spaces.html">Exhibition</a></li>
   <div >
-            <label for="menu_checkbox" class="menu_hamburger">
-              <i class="fa-solid fa-bars"></i>
-            Menu</label>    
-            <input type="checkbox" id="menu_checkbox">
+       
     <li class="hide_list"> <a href="#">For kids</a> </li>
     <li class="hide_list"> <a href="#">For teachers</a> </li>
     <li class="hide_list"> <a href="#">For Researchers</a> </li>
@@ -40,7 +37,9 @@
 </nav>
 </section>
 </header>
-<main class="event_main">
+<main>
+    <div class="Event_headline"> 
+    <h1 >Special Events this month</h1></div>
 <div class="event">
     <a href="#"> <img src="Images/Visitor.jpg" alt="Nasa logo with skies behind it"></a>
     <p>Visiting Professor of Aeronautics; Prof Sheila Widnall</p>
