--- a/Index.html
+++ b/Index.html
@@ -18,7 +18,7 @@
         <a href="Index.html"><img src="/Images/Logo.png" class="LOGO" alt="Logo, purple square with orange triangle and yelloow hexagon, next to the text COMMUNITY SCIENCE MUSEUM in all caps"></a>
         <label for="menu_checkbox" class="menu_hamburger"><i class="fa-solid fa-bars"></i> Menu</label>    
           <input type="checkbox" id="menu_checkbox">
-        <nav> 
+        <nav class="header_menu"> 
    <ul>
       <li><a href="Index.html">Home</a></li>
       <li><a href="Visit.html">Visit</a></li>
