--- a/Index.html
+++ b/Index.html
@@ -139,11 +139,11 @@ Ukiah, California 95482, USA
     <div>
         <h3>Contact us</h3>
         <h4> Location</h4>
-        <h2> 1550 Millview RD</h2>
-        <h2>Ukaia, California</h2>
-        <h2> 9582,USA</h2>
+        <p> 1550 Millview RD</p>
+        <p>Ukaia, California</p>
+        <p> 9582,USA</p>
         <h4> Phone:</h4>
-        <h2> 202-555-0171</h2>
+        <p> 202-555-0171</p>
     </div>
     <div>
         <h3> Keep in touch</h3>
