--- a/Visit.html
+++ b/Visit.html
@@ -88,7 +88,7 @@
 </main> 
 </body>
 <footer>
-    <div class="footer_contact">
+    <div>
         <h3>Contact us</h3>
         <h4> Location</h4>
         <p> 1550 Millview RD</p>
