Hamburger menu fixed

--- a/-robotics.html
+++ b/-robotics.html
@@ -13,30 +13,26 @@
 <body>
     <header class="header">
         <a href="Index.html"><img src="/Images/Logo.png" class="LOGO" alt="Logo, purple square with orange triangle and yelloow hexagon, next to the text COMMUNITY SCIENCE MUSEUM in all caps"></a>
-  <nav class="header_menu"> 
+        <label for="menu_checkbox" class="menu_hamburger"><i class="fa-solid fa-bars"></i> Menu</label>    
+          <input type="checkbox" id="menu_checkbox">
+        <nav class="header_menu"> 
    <ul>
       <li><a href="Index.html">Home</a></li>
       <li><a href="Visit.html">Visit</a></li>
-      <li><a href="exhibition_Spaces.html">Exhibition</a></li>
-       <li> 
-        <input type="checkbox" id="menu_checkbox">
-       <label for="menu_checkbox" class="hamburger_bars"> 
-       <i class="fa-solid fa-bars"> </i></label> 
-      Menu</li>
-      <div  class="hide_list">
-        <a   class="hide_list" href="#">For kids</a>
-        <a href="#">For teachers</a>
-        <a href="#">For Researchers</a>
-        <a href="#">Support us</a>
-        <a href="#">Volenteer</a>
-       <a href="#">Internship</a>
-        <a href="#">Shop</a>
-        <a href="#">FAQ</a>
-        <a href="#">Keep in touch</a>
-        <a href="#">Contact us</a>
-    </div>
-
-   </ul>
+      <li><a href="exhibition_Spaces.html">Exhibition Spaces</a></li>  
+      <li> <a href="special_events.html"> Special events</a></li>
+   <div >
+    <li class="hide_list"> <a href="#">For kids</a> </li>
+    <li class="hide_list"> <a href="#">For teachers</a> </li>
+    <li class="hide_list"> <a href="#">For Researchers</a> </li>
+    <li class="hide_list"> <a href="#">Support us</a> </li>
+    <li class="hide_list"> <a href="#">Volenteer</a> </li>
+    <li class="hide_list"> <a href="#">Internship</a> </li>
+    <li class="hide_list"> <a href="#">Shop</a> </li>
+    <li class="hide_list"> <a href="#">FAQ</a> </li>
+    <li class="hide_list"> <a href="#">Keep in touch</a> </li>
+    <li class="hide_list"> <a href="#">Contact us</a> </li>
+            </div>   </ul>
   </nav>
 </header>
 <main class="spaces_robotics_main">
