--- a/Index.html
+++ b/Index.html
@@ -24,7 +24,6 @@
       <li><a href="Visit.html">Visit</a></li>
       <li><a href="exhibition_Spaces.html">Exhibition Spaces</a></li>  
       <li> <a href="special_events.html"> Special events</a></li>
-   </ul>
    <div >
     <li class="hide_list"> <a href="#">For kids</a> </li>
     <li class="hide_list"> <a href="#">For teachers</a> </li>
@@ -36,7 +35,7 @@
     <li class="hide_list"> <a href="#">FAQ</a> </li>
     <li class="hide_list"> <a href="#">Keep in touch</a> </li>
     <li class="hide_list"> <a href="#">Contact us</a> </li>
-            </div>
+            </div>   </ul>
   </nav>
 </header>
     <main >
