--- a/special_events.html
+++ b/special_events.html
@@ -11,16 +11,17 @@
 <script src="https://kit.fontawesome.com/db895f6c4c.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <header>
+    <header class="header">
         <a href="Index.html"><img src="/Images/Logo.png" class="LOGO" alt="Logo, purple square with orange triangle and yelloow hexagon, next to the text COMMUNITY SCIENCE MUSEUM in all caps"></a>
-  <section class="header_menu"> 
-    <nav>
+        <label for="menu_checkbox" class="menu_hamburger"><i class="fa-solid fa-bars"></i> Menu</label>    
+          <input type="checkbox" id="menu_checkbox">
+        <nav class="header_menu"> 
    <ul>
-      <li class="menu_top"><a href="Index.html">Home</a></li>
-      <li class="menu_top"><a href="Visit.html">Visit</a></li>
-      <li class="menu_top"><a href="exhibition_Spaces.html">Exhibition</a></li>
-  <div >
-       
+      <li><a href="Index.html">Home</a></li>
+      <li><a href="Visit.html">Visit</a></li>
+      <li><a href="exhibition_Spaces.html">Exhibition Spaces</a></li>  
+      <li> <a href="special_events.html"> Special events</a></li>
+   <div >
     <li class="hide_list"> <a href="#">For kids</a> </li>
     <li class="hide_list"> <a href="#">For teachers</a> </li>
     <li class="hide_list"> <a href="#">For Researchers</a> </li>
@@ -31,11 +32,8 @@
     <li class="hide_list"> <a href="#">FAQ</a> </li>
     <li class="hide_list"> <a href="#">Keep in touch</a> </li>
     <li class="hide_list"> <a href="#">Contact us</a> </li>
-            </div>
-        </div>
-    </ul>
-</nav>
-</section>
+            </div>   </ul>
+  </nav>
 </header>
 <main>
     <div class="Event_headline"> 
