--- a/-Cosmology.html
+++ b/-Cosmology.html
@@ -47,10 +47,10 @@ Our fantastic exhibition, ‘The Sky Above Us’, explores the night sky and wha
 We’ll locate the various constellations and galaxies that can be seen and learn a bit about the early navigators who used the stars to travel by.
 Follow the journey of our solar exploration: from early Arab traders, to Galileo’s telescope, to the latest exploration of the planets in our solar system.</p>
 <ul class="spaces_images">
-    <img src="Images/CosmoInf1.jpg" alt=" homade stars with a girl with a witchershat in the background">
-    <img src="Images/CosmoInf2.jpg" alt="a galaxy">
-    <img src="Images/CosmoInf3.jpg" alt="a boy with astronaut chlotes sitting infront of a blue background with drawn space elements like stars and">
-    <img src="Images/CosmoInf4.jpg" alt="a girl standing with a univerce image projeckted over her">
+    <img src="Images/CosmoInf1.jpg" class="spaces_image" alt=" homade stars with a girl with a witchershat in the background">
+    <img src="Images/CosmoInf2.jpg" class="spaces_image" alt="a galaxy">
+    <img src="Images/CosmoInf3.jpg" class="spaces_image" alt="a boy with astronaut chlotes sitting infront of a blue background with drawn space elements like stars and">
+    <img src="Images/CosmoInf4.jpg" class="spaces_image" alt="a girl standing with a univerce image projeckted over her">
     </ul>
 </div>
 
