css duplication spaces fixed
css duplication removed
headline 650 not longer under menu
exhib spaces created

--- a/exhibition_Spaces.html
+++ b/exhibition_Spaces.html
@@ -7,7 +7,8 @@
     <meta description="Images with links to the different exhibition spaces">
     <title>CSM|Exhibition_Spaces</title>
     <link href="Css/style.css" rel="stylesheet">
-<link href="Css/spaces.css" rel="stylesheet">
+    <link href="Css/index.css" rel="stylesheet">
+<link href="Css/exhib_spaces.css" rel="stylesheet">
 <script src="https://kit.fontawesome.com/db895f6c4c.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -40,27 +41,33 @@
     <h1 > Our exhibition spaces</h1></div>
     <section class="exhibition_main">
     <div class="exhibition_space"><a href="-Cosmology.html"> <img src="Images/Cosmo1.jpg" alt="night sky with many stars and a purple glow"></a>
-        <p>Cosmology</p>
+        <h2>Cosmology</h2>
+        <h3> Explore the wonders of our cosmos. </h3>
     </div>
     <div class="exhibition_space">
         <a href="-evelution.html"> <img src="Images/Evelution1.jpg" alt="Scelletons of the evelution, four scelletons, one monkey, then a small human, bigger human and human today"></a>
-        <p>Evolution</p>
+        <h2>Evolution</h2>
+        <h3>   Where do we come from and how did we get here? </h3>
     </div>
     <div class="exhibition_space">
         <a href="-bioligy.html"> <img src="Images/BioMed1_heart.jpg" alt="model of a heart"></a>
-        <p>Biology and Medicine</p>
+        <h2>Biology and Medicine</h2>
+        <h3>From micro-organisms to the human body </h3>
     </div>
     <div class="exhibition_space">
         <a href="-robotics.html"> <img src="Images/Robot1.jpg" alt="two teenagers one smiling and looking into the camera with a red robotic objeckt infront of him"></a>
-        <p>Robotics and AI</p>
+        <h2>Robotics and AI</h2>
+        <h3>  The information revolution is here  </h3>
     </div>
     <div class="exhibition_space_eco">
         <a href="-Ecology.html"> <img src="Images/Ecology1.jpg" alt="A boy and a teacher looking at a home made windmill"></a>
-        <p>Ecology</p>
+        <h2>Ecology</h2>
+        <h3>  Learn more of the impact humans are having on the planet. </h3>
     </div>
     <div class="exhibition_space_lego">
         <a href="-lego.html"> <img src="Images/Lego1.jpg" alt="A lego animal with four legs and two antennas, in different colors, with students in the background"></a>
-        <p>Lego-room</p>
+        <h2>Lego-room</h2>
+        <h3>   Our Lego-room has all the parts you could ever imagine. </h3>
     </div>
 </main>
 </body>
