--- a/-Ecology.html
+++ b/-Ecology.html
@@ -41,9 +41,9 @@
     <h1> Ecology</h1></div>
 <section class="spaces_info">
     <div class="spaces_infotext">
-    <h3>   As we learn more and more of the impact humans are having on the planet. </h3>
+    <h3>  Learn more of the impact humans are having on the planet. </h3>
     <p>     
-        The more important it becomes that scientists explore how to create a sustainable future not just for humans but for the whole planet.
+       As we learn more, the more important it becomes that scientists explore how to create a sustainable future not just for humans but for the whole planet.
         In our ecology section of the museum, we unpack the dangers we currently face including global warming, extinction of species, and pollution.
         But we also focus on the positive ways we can all contribute to a brighter future.
     </p>        
