added footer on phone

--- a/-lego.html
+++ b/-lego.html
@@ -35,7 +35,7 @@
             </div>   </ul>
   </nav>
 </header>
-<main class="spaces_main">
+<main class="spaces_lego_main">
     <div class="spaces_header2">
     <img src="Images/Lego1.jpg" alt="zoomed inn on a lego animal with four legs and different colors" >
     <h1> Lego</h1></div>
