--- a/Index.html
+++ b/Index.html
@@ -69,7 +69,7 @@
             <h2> For researchers</h2></a>
             </div>
         </section>
-        <div class="exhibition_headline"> 
+        <div class="exhibition_headline2"> 
             <h1 > Our exhibition spaces</h1></div>
         <section class="exhibition_main">
             
