Fixed meta description

--- a/Index.html
+++ b/Index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta description="Home page for the Community Science Museum">
+    <meta name="description" Home page for the Community Science Museum>
     
     <title>CSM|Home</title>
     <link href="Css/style.css" rel="stylesheet">
