--- a/special_events.html
+++ b/special_events.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta description="Images with links to the different special events going on now">
+    <meta name="description" Images with links to the different special events going on now>
     <title>CSM|Events</title>
     <link href="Css/style.css" rel="stylesheet">
 <link href="Css/special.css" rel="stylesheet">
@@ -32,7 +32,8 @@
     <li class="hide_list"> <a href="#">FAQ</a> </li>
     <li class="hide_list"> <a href="#">Keep in touch</a> </li>
     <li class="hide_list"> <a href="#">Contact us</a> </li>
-            </div>   </ul>
+            </div>   
+        </ul>
   </nav>
 </header>
 <main>
