--- a/Visit.html
+++ b/Visit.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta description="Addres and information about your visit to the museum. Opening hours shop cost etc">
+    <meta name="description" Addres and information about your visit to the museum. Opening hours shop cost etc>
     <title>CSM|Visit</title>
     <link href="Css/style.css" rel="stylesheet">
 <link href="Css/visit.css" rel="stylesheet">
