--- a/Index.html
+++ b/Index.html
@@ -27,7 +27,7 @@
       <li><a href="exhibition_Spaces.html">Exhibition Spaces</a></li>  
       <li> <a href="special_events.html"> Special events</a></li>
    <div >
-    <li class="hide_list"> <a href="#">For kids</a> </li>
+    <li class="hide_list"> <a href="-kids.html">For kids</a> </li>
     <li class="hide_list"> <a href="#">For teachers</a> </li>
     <li class="hide_list"> <a href="#">For Researchers</a> </li>
     <li class="hide_list"> <a href="#">Support us</a> </li>
@@ -55,7 +55,7 @@
                 <h2>Special Events</h2></a>
             </div>
             <div class="Image_link">
-                <a href="#">
+                <a href="-kids.html">
                 <img src="Images/kids.jpg" alt="Picture of a child reading a book whith spaceships in the background">
                 <h2> For kids</h2></a>
             </div>
