--- a/Index.html
+++ b/Index.html
@@ -60,7 +60,7 @@
                 <h2> For kids</h2></a>
             </div>
             <div class="Image_link">
-                <a href="#">
+                <a href="-teachers.html">
                 <img src="Images/Teacher1.jpg" alt=" Lady writing on blackboard with her back turned">
                 <h2> For teachers</h2></a>
             </div>
