--- a/Index.html
+++ b/Index.html
@@ -28,8 +28,8 @@
       <li> <a href="special_events.html"> Special events</a></li>
    <div >
     <li class="hide_list"> <a href="-kids.html">For kids</a> </li>
-    <li class="hide_list"> <a href="#">For teachers</a> </li>
-    <li class="hide_list"> <a href="#">For Researchers</a> </li>
+    <li class="hide_list"> <a href="-teachers.html">For teachers</a> </li>
+    <li class="hide_list"> <a href="-Researchers.html">For Researchers</a> </li>
     <li class="hide_list"> <a href="#">Support us</a> </li>
     <li class="hide_list"> <a href="#">Volenteer</a> </li>
     <li class="hide_list"> <a href="#">Internship</a> </li>
@@ -64,7 +64,7 @@
                 <img src="Images/Teacher1.jpg" alt=" Lady writing on blackboard with her back turned">
                 <h2> For teachers</h2></a>
             </div>
-            <div class="Image_link"><a href="#">
+            <div class="Image_link"><a href="-Researchers.html">
                 <img src="Images/research.jpg" alt="man and lady in labcoats in a labratory">
             <h2> For researchers</h2></a>
             </div>
