Support and volunteer created

--- a/Index.html
+++ b/Index.html
@@ -30,7 +30,7 @@
     <li class="hide_list"> <a href="-kids.html">For kids</a> </li>
     <li class="hide_list"> <a href="-teachers.html">For teachers</a> </li>
     <li class="hide_list"> <a href="-Researchers.html">For Researchers</a> </li>
-    <li class="hide_list"> <a href="#">Support us</a> </li>
+    <li class="hide_list"> <a href="support.html">Support us</a> </li>
     <li class="hide_list"> <a href="#">Volenteer</a> </li>
     <li class="hide_list"> <a href="#">Internship</a> </li>
     <li class="hide_list"> <a href="#">Shop</a> </li>
@@ -111,11 +111,11 @@
        
        
         <section class="Image_links">
-            <div class="Image_link"> <a href="#">
+            <div class="Image_link"> <a href="support.html">
                 <img src="Images/support.jpg" alt="picture of a colorfull wall with the text museum in colors on it">
                 <h2> Support us</h2></a>
             </div>
-            <div class="Image_link"><a href="#">
+            <div class="Image_link"><a href="volunteer.html">
                 <img src="Images/volenteer.jpg" alt=" Man in labcoat with children around him, poring liquid from one glass to another">
                 <h2>Volunteer</h2></a>
             </div>
