--- a/Index.html
+++ b/Index.html
@@ -119,7 +119,7 @@
                 <img src="Images/volenteer.jpg" alt=" Man in labcoat with children around him, poring liquid from one glass to another">
                 <h2>Volunteer</h2></a>
             </div>
-            <div class="Image_link"> <a href="#">
+            <div class="Image_link"> <a href="internship.html">
                 <img src="Images/internship.jpg" alt="lady with labcoat and facemask looking into a microskope">
             <h2>Internships</h2></a>
             </div>
