--- a/Index.html
+++ b/Index.html
@@ -127,7 +127,7 @@
                 <img src="Images/Shop.jpg" alt="picture of many wires conected together and forming a big ball, seen from underneeth">
             <h2> Shop</h2></a>
             </div>
-            <div class="Image_link"><a href="#">
+            <div class="Image_link"><a href="FAQ.html">
                 <img src="Images/FAQ.jpg" alt=" Green keyhole with three borromean rings around it">
                 <h2> FAQ</h2></a>
             </div></div>
