--- a/Index.html
+++ b/Index.html
@@ -123,7 +123,7 @@
                 <img src="Images/internship.jpg" alt="lady with labcoat and facemask looking into a microskope">
             <h2>Internships</h2></a>
             </div>
-            <div class="Image_link"> <a href="#">
+            <div class="Image_link"> <a href="shop.html">
                 <img src="Images/Shop.jpg" alt="picture of many wires conected together and forming a big ball, seen from underneeth">
             <h2> Shop</h2></a>
             </div>
