--- a/-kids.html
+++ b/-kids.html
@@ -37,7 +37,7 @@
 </header>
 <main class="spaces_main_kids">
     <div class="spaces_header2">
-    <img src="Images/kids.jpg" alt="zoomed inn on the night sky">
+    <img src="Images/kids.jpg" alt="zoomed inn on Picture of a boy with glasses, looking through a looking glass and working on burning metal on a tecknical board">
     <h1 class="Headline"> For Kids</h1></div>
 <section class="spaces_info">
     <div class="spaces_infotext">
